[package]
name = "gpkg"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
unindent = "0.1.5"
log = "0.4.8"
base64 = "0.11.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
env_logger = "0.8.3"
