[package]
name = "gpkg_cli"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2018"

[[bin]]
name = "gpkg"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
dirs = "2.0.2"
log = "0.4.8"
env_logger = "0.7.1"
colored = "2.0.0"
gpkg = { path = "../gpkg" }
prettytable-rs = "0.8.0"
serde_json = "1.0.44"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
